<resources>
    <string name="UNEXPECTED_ERROR">Oops! An unexpected error was occurred. Try later!!</string>

    <string name="app_name">Philosophy Quotes</string>
    <string name="welcome_title">Find quotes from ancient stoic philosophers.</string>
    <string name="welcome_description">Explore awesome quotes from the most brilliant minds of Stoic philosophy</string>
    <string name="get_started">Get Started</string>
    <string name="name_question">What is your name?</string>
    <string name="your_name_field">Name</string>
    <string name="continue_button_text">Continue</string>
    <string name="alt_heart_text">Icon that representing an heart</string>
    <string name="alt_send_text">Icon that represents an send button</string>
    <string name="alt_quote_text">Icon that represents an quote</string>
    <string name="alt_logo_text">App Logo with a cube and quote icon in yellow color</string>
    <string name="quote_description_sample">How ridiculous and how strange to be surprised at anything which happens in life.</string>
    <string name="author_sample">- Marcus Aurelius</string>
    <string name="refresh_button">Refresh</string>
    <string name="quote_logo_shimmer">Represents quote logo in shimmer effect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_quotes">Your quotes</string>
    <string name="no_quotes">No quotes</string>
    <string name="empty_quote_list_text">Save an quote and their appear here</string>
</resources>