<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.HomeActivity">

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/alt_quote_text"
            android:src="@drawable/ic_quote" />

        <TextView
            android:id="@+id/quoteDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter"
            android:text="@string/quote_description_sample"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/quoteAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/author_sample" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/alt_heart_text"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/alt_send_text"
                android:src="@drawable/ic_send" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshQuoteButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inter"
            android:text="@string/refresh_button"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/black" />

    </LinearLayout>

</RelativeLayout>